--- a/templates/store/product_details.html
+++ b/templates/store/product_details.html
@@ -28,6 +28,24 @@
 
                                 <h2 class="title">{{ product.name }}</h2>
 
+                        <div class="rating-stars">
+                                <span>
+                                    <i class="fa fa-star{% if product.average_rating < 0.5 %}-o{% elif review.rating >= 0.5 and product.average_rating < 1 %}-half {% endif %}"
+                                       aria-hidden="true"></i>
+                                    <i class="fa fa-star{% if product.average_rating < 1.5 %}-o{% elif review.rating >= 1.5 and product.average_rating < 2 %}-half {% endif %}"
+                                       aria-hidden="true"></i>
+                                    <i class="fa fa-star{% if product.average_rating < 2.5 %}-o{% elif review.rating >= 2.5 and product.average_rating < 3 %}-half {% endif %}"
+                                       aria-hidden="true"></i>
+                                    <i class="fa fa-star{% if product.average_rating < 3.5 %}-o{% elif review.rating >= 3.5 and product.average_rating < 4 %}-half {% endif %}"
+                                       aria-hidden="true"></i>
+                                    <i class="fa fa-star{% if product.average_rating < 4.5 %}-o{% elif review.rating >= 4.5 and product.average_rating < 5 %}-half {% endif %}"
+                                       aria-hidden="true"></i>
+                                </span>
+                                                    <span>{{ product.average_rating }}</span>
+
+                            <span> - {{ product.count_ratings | add:0}} reviews</span>
+                        </div>
+                            
                                 <div class="mb-3">
                                     <var class="price h4">${{ product.price }}</var>
                                 </div>
@@ -87,50 +105,37 @@
                 <div class="col-md-9">
 
 
-
                     <form action="{% url 'submit_review' product.id %}" method="POST">
                         {% csrf_token %}
                         <h4>Write your review</h4>
                         <div>
-                            {#                        Rating Stars#}
                             <p>Rate this product:</p>
-
                             <div class="rate">
-                                {#                                <input type="radio" name="rating" id="rating10" value="5" required><label for="rating10" title="5"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating9" value="4.5" required><label for="rating9" title="4.5" class="half"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating8" value="4" required><label for="rating8" title="4"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating7" value="3.5" required><label for="rating7" title="3.5" class="half"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating6" value="3" required><label for="rating6" title="3"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating5" value="2.5" required><label for="rating5" title="2.5" class="half"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating4" value="2" required><label for="rating4" title="2"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating3" value="1.5" required><label for="rating3" title="1.5" class="half"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating2" value="1" required><label for="rating2" title="1"></label>#}
-                                {#                                <input type="radio" name="rating" id="rating1" value="0.5" required><label for="rating1" title="0.5" class="half"></label>#}
                                 <input type="radio" id="rating10" name="rating" value="5"/><label for="rating10"
-                                                                                                   title="5 stars"></label>
+                                                                                                  title="5 stars"></label>
                                 <input type="radio" id="rating9" name="rating" value="4.5"/><label class="half"
-                                                                                                 for="rating9"
-                                                                                                 title="4 1/2 stars"></label>
+                                                                                                   for="rating9"
+                                                                                                   title="4 1/2 stars"></label>
                                 <input type="radio" id="rating8" name="rating" value="4"/><label for="rating8"
                                                                                                  title="4 stars"></label>
                                 <input type="radio" id="rating7" name="rating" value="3.5"/><label class="half"
-                                                                                                 for="rating7"
-                                                                                                 title="3 1/2 stars"></label>
+                                                                                                   for="rating7"
+                                                                                                   title="3 1/2 stars"></label>
                                 <input type="radio" id="rating6" name="rating" value="3"/><label for="rating6"
                                                                                                  title="3 stars"></label>
                                 <input type="radio" id="rating5" name="rating" value="2.5"/><label class="half"
-                                                                                                 for="rating5"
-                                                                                                 title="2 1/2 stars"></label>
+                                                                                                   for="rating5"
+                                                                                                   title="2 1/2 stars"></label>
                                 <input type="radio" id="rating4" name="rating" value="2"/><label for="rating4"
                                                                                                  title="2 stars"></label>
                                 <input type="radio" id="rating3" name="rating" value="1.5"/><label class="half"
-                                                                                                 for="rating3"
-                                                                                                 title="1 1/2 stars"></label>
+                                                                                                   for="rating3"
+                                                                                                   title="1 1/2 stars"></label>
                                 <input type="radio" id="rating2" name="rating" value="1"/><label for="rating2"
                                                                                                  title="1 star"></label>
                                 <input type="radio" id="rating1" name="rating" value="0.5"/><label class="half"
-                                                                                                 for="rating1"
-                                                                                                 title="1/2 star"></label>
+                                                                                                   for="rating1"
+                                                                                                   title="1/2 star"></label>
 
                             </div>
                             <br>
@@ -142,12 +147,14 @@
                             <br>
                             {% if user.is_authenticated %}
                                 {% if order_product %}
-                                    <button type="submit" class="btn  btn-primary"><span class="text">Submit Review</span>
-                                        <i class="fas fa-comment"></i></button>                                {% else %}
-                                <p>You can leave review only if you purchased this product.</p>
+                                    <button type="submit" class="btn  btn-primary"><span
+                                            class="text">Submit Review</span>
+                                        <i class="fas fa-comment"></i></button>
+                                {% else %}
+                                    <p>You can leave review only if you purchased this product.</p>
                                 {% endif %}
                             {% else %}
-                            <p>Log in to post a review. <span><a href="{% url 'login' %}">Login now</a></span></p>
+                                <p>Log in to post a review. <span><a href="{% url 'login' %}">Login now</a></span></p>
                             {% endif %}
                         </div>
                         {% include 'includes/alerts.html' %}
@@ -155,34 +162,53 @@
                     <br>
                     <header class="section-heading">
                         <h3>Customer Reviews </h3>
-
+{#                    <h6>Average Reviews</h6>#}
+{#                        <div class="rating-stars">#}
+                        {#                                <span>#}
+                        {#                                    <i class="fa fa-star{% if product.average_rating < 0.5 %}-o{% elif review.rating >= 0.5 and product.average_rating < 1 %}-half {% endif %}"#}
+                        {#                                       aria-hidden="true"></i>#}
+                        {#                                    <i class="fa fa-star{% if product.average_rating < 1.5 %}-o{% elif review.rating >= 1.5 and product.average_rating < 2 %}-half {% endif %}"#}
+                        {#                                       aria-hidden="true"></i>#}
+                        {#                                    <i class="fa fa-star{% if product.average_rating < 2.5 %}-o{% elif review.rating >= 2.5 and product.average_rating < 3 %}-half {% endif %}"#}
+                        {#                                       aria-hidden="true"></i>#}
+                        {#                                    <i class="fa fa-star{% if product.average_rating < 3.5 %}-o{% elif review.rating >= 3.5 and product.average_rating < 4 %}-half {% endif %}"#}
+                        {#                                       aria-hidden="true"></i>#}
+                        {#                                    <i class="fa fa-star{% if product.average_rating < 4.5 %}-o{% elif review.rating >= 4.5 and product.average_rating < 5 %}-half {% endif %}"#}
+                        {#                                       aria-hidden="true"></i>#}
+                        {#                                </span>#}
+                        {#                        </div>#}
                     </header>
 
                     {% for review in reviews %}
-                    <article class="box mb-3">
-                        <div class="icontext w-100">
-                            <img src="{% static './images/profile.jpg' %}" class="img-xs icon rounded-circle">
-                            <div class="text">
-                                <span class="date text-muted float-md-right">{{ review.created_at }}</span>
-                                <h6 class="mb-1">{{ review.user.full_name }}</h6>
-                                <div class="rating-stars">
+                        <article class="box mb-3">
+                            <div class="icontext w-100">
+                                <img src="{% static './images/profile.jpg' %}" class="img-xs icon rounded-circle">
+                                <div class="text">
+                                    <span class="date text-muted float-md-right">{{ review.created_at }}</span>
+                                    <h6 class="mb-1">{{ review.user.full_name }}</h6>
+                                    <div class="rating-stars">
                                     <span>
-                                        <i class="fa fa-star{% if review.rating == 0.5 %}-half{% elif review.rating < 1 %}-o {% endif %}" aria-hidden="true"></i>
-                                        <i class="fa fa-star{% if review.rating == 1.5 %}-half{% elif review.rating < 2 %}-o {% endif %}" aria-hidden="true"></i>
-                                        <i class="fa fa-star{% if review.rating == 2.5 %}-half{% elif review.rating < 3 %}-o {% endif %}" aria-hidden="true"></i>
-                                        <i class="fa fa-star{% if review.rating == 3.5 %}-half{% elif review.rating < 4 %}-o {% endif %}" aria-hidden="true"></i>
-                                        <i class="fa fa-star{% if review.rating == 4.5 %}-half{% elif review.rating < 5 %}-o {% endif %}" aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 0.5 %}-half{% elif review.rating < 1 %}-o {% endif %}"
+                                           aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 1.5 %}-half{% elif review.rating < 2 %}-o {% endif %}"
+                                           aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 2.5 %}-half{% elif review.rating < 3 %}-o {% endif %}"
+                                           aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 3.5 %}-half{% elif review.rating < 4 %}-o {% endif %}"
+                                           aria-hidden="true"></i>
+                                        <i class="fa fa-star{% if review.rating == 4.5 %}-half{% elif review.rating < 5 %}-o {% endif %}"
+                                           aria-hidden="true"></i>
                                     </span>
+                                    </div>
                                 </div>
+                            </div> <!-- icontext.// -->
+                            <div class="mt-3">
+                                <h6>{{ review.subject }}</h6>
+                                <p>
+                                    {{ review.review }}
+                                </p>
                             </div>
-                        </div> <!-- icontext.// -->
-                        <div class="mt-3">
-                            <h6>{{ review.subject }}</h6>
-                            <p>
-                                {{ review.review }}
-                            </p>
-                        </div>
-                    </article>
+                        </article>
                     {% endfor %}
 
                 </div> <!-- col.// -->
