--- a/templates/portfolio/portfolio.html
+++ b/templates/portfolio/portfolio.html
@@ -1,4 +1,30 @@
 {% load static %}
+{#<!DOCTYPE html>#}
+{#<html lang="en">#}
+{#<head>#}
+{#    <meta charset="UTF-8">#}
+{#    <meta name="viewport" content="width=device-width, initial-scale=1.0">#}
+{#    <title>Resume</title>#}
+{#    <style>#}
+{#        html, body {#}
+{#            height: 100%;#}
+{#            margin: 0;#}
+{#            padding: 0;#}
+{#        }#}
+{#        object {#}
+{#            width: 100%;#}
+{#            height: 100vh;#}
+{#            border: none;#}
+{#        }#}
+{#    </style>#}
+{#</head>#}
+{#<body>#}
+{#    <object data="{% static 'Marko_Jovicic_Resume.pdf' %}" type="application/pdf">#}
+{#        Your browser does not support PDFs. Please download the PDF to view it:#}
+{#        <a href="{% static 'Marko_Jovicic_Resume.pdf' %}">Download PDF</a>#}
+{#    </object>#}
+{#</body>#}
+{#</html>#}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,23 +36,17 @@
             height: 100%;
             margin: 0;
             padding: 0;
+            display: flex;
+            justify-content: center;
+            align-items: center;
         }
-        object {
-            width: 100%;
-            height: 100vh;
-            border: none;
-        }
-        #myPDF {
-            width: 100%;
-            height: 100vh;
+        img {
+            max-width: 100%;
+            height: auto;
         }
     </style>
 </head>
 <body>
-{#    <object data="{% static 'Marko_Jovicic_Resume.pdf' %}" type="application/pdf">#}
-{#        Your browser does not support PDFs. Please download the PDF to view it:#}
-{#        <a href="{% static 'Marko_Jovicic_Resume.pdf' %}">Download PDF</a>#}
-{#    </object>#}
-<iframe id="myPDF" src="{% static 'Marko_Jovicic_Resume.pdf' %}" frameborder="0"></iframe>
+    <img src="{% static 'Marko_Jovicic_Resume.png' %}" alt="Marko Jovicic Resume">
 </body>
 </html>
