--- a/templates/portfolio/portfolio.html
+++ b/templates/portfolio/portfolio.html
@@ -1,4 +1,4 @@
-{% load static %}
+{#{% load static %}#}
 {#<!DOCTYPE html>#}
 {#<html lang="en">#}
 {#<head>#}
@@ -25,20 +25,24 @@
 {#    </object>#}
 {#</body>#}
 {#</html>#}
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Resume</title>
+    <!-- Include Bootstrap CSS -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         html, body {
             height: 100%;
             margin: 0;
             padding: 0;
-            display: flex;
-            justify-content: center;
-            align-items: center;
+        }
+        .custom-img-container {
+            max-width: 1000px; /* Adjust width as needed */
+            margin: auto;
         }
         img {
             max-width: 100%;
@@ -47,6 +51,12 @@
     </style>
 </head>
 <body>
-    <img src="{% static 'Marko_Jovicic_Resume.png' %}" alt="Marko Jovicic Resume">
+    <div class="container mt-4">
+        <div class="custom-img-container">
+            <img src="{% static 'rezume.png' %}" alt="Marko Jovicic Resume" class="img-fluid">
+        </div>
+    </div>
+    <!-- Include Bootstrap JS (Optional, if needed for other functionalities) -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
